RESOLVED FIXED Bug 88379
EventHandler shouldn't schedule the fake mousemove event timer when scrolling on devices that don't have a mouse
https://bugs.webkit.org/show_bug.cgi?id=88379
Summary EventHandler shouldn't schedule the fake mousemove event timer when scrolling...
Andy Estes
Reported 2012-06-05 17:16:03 PDT
In <http://trac.webkit.org/changeset/119465> we stopped dispatching fake mousemove events when scrolling on devices that don't support mice. This event is dispatched on a timer, so one better would be to not even schedule the timer (rather than scheduling the timer but making it a no-op).
Attachments
patch (3.58 KB, patch)
2012-06-08 12:26 PDT, Antonio Gomes
no flags
(committed r119862, r=jamesr) patch v2 (3.73 KB, patch)
2012-06-08 13:26 PDT, Antonio Gomes
no flags
Antonio Gomes
Comment 1 2012-06-08 12:26:49 PDT
James Robinson
Comment 2 2012-06-08 12:57:12 PDT
Comment on attachment 146630 [details] patch There is the case of the setting changing between when the scroll happens and when the timer fires - maybe we should still check in the timer fire?
Antonio Gomes
Comment 3 2012-06-08 13:09:57 PDT
(In reply to comment #2) > (From update of attachment 146630 [details]) > There is the case of the setting changing between when the scroll happens and when the timer fires - maybe we should still check in the timer fire? though rare, it is a possible case, yes. Lets check both..
Antonio Gomes
Comment 4 2012-06-08 13:26:47 PDT
Created attachment 146637 [details] (committed r119862, r=jamesr) patch v2
Note You need to log in before you can comment on or make changes to this bug.